--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 they hit the mass market! hot foreclosure deals
                                 with one simple search.
                             </p>
-                            <a href="" class="btn hero-cta">More About Us</a>
+                            <a href="#!" class="btn hero-cta">More About Us</a>
                         </div>
                         <img
                             src="./assets/img/house-illustration.svg"
