--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                             </a>
                             <a href="#1" class="social-link">
                                 <img
-                                    src="./assets/img/linker_icon.svg"
+                                    src="./assets/img/lindedin_icon.svg"
                                     alt=""
                                     class="link"
                                 />
