--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Besnik</title>
+
         <!-- Favicon -->
         <link
             rel="apple-touch-icon"
@@ -95,22 +96,42 @@
         />
         <!-- Style -->
         <link rel="stylesheet" href="./assets/css/styles.css" />
+        <link rel="stylesheet" href="./assets/css/reponsive.css" />
     </head>
     <body>
         <header class="fixed-header">
             <div class="content">
                 <nav class="navbar">
+                    <label for="menu-checkbox" class="toggle-menu">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512"
+                        >
+                            <path
+                                fill="currentColor"
+                                d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
+                            />
+                        </svg>
+                    </label>
                     <!-- Logo -->
                     <a href="#">
-                        <img src="./assets/img/Logo.svg" alt="Besnik." />
+                        <img
+                            class="logo"
+                            src="./assets/img/Logo.svg"
+                            alt="Besnik."
+                        />
                     </a>
                     <!-- Navigation -->
-                    <ul>
+                    <ul id="pc-nav">
                         <li><a href="#">Home</a></li>
                         <li><a href="#services">Services</a></li>
                         <li><a href="#features">Features</a></li>
                         <li><a href="#resources">Resources</a></li>
                         <li><a href="#contact">Contact</a></li>
+                        <li class="show-on-mobie separate">
+                            <a href="#!">Sign in</a>
+                        </li>
+                        <li class="show-on-mobie"><a href="#!">Sign up</a></li>
                     </ul>
                     <!-- Action -->
                     <div class="actions">
@@ -120,6 +141,36 @@
                 </nav>
             </div>
         </header>
+
+        <header class="mobile-header">
+            <input
+                type="checkbox"
+                name=""
+                id="menu-checkbox"
+                class="menu-checkbox"
+                hidden
+            />
+
+            <label for="menu-checkbox" class="menu-overlay"> </label>
+
+            <div class="menu-drawer">
+                <a href="#">
+                    <img
+                        class="logo"
+                        src="./assets/img/Logo.svg"
+                        alt="Besnik."
+                    />
+                </a>
+
+                <ul id="mobile-nav"></ul>
+                <script>
+                    const pcNav = document.querySelector("#pc-nav");
+                    const mobileNav = document.querySelector("#mobile-nav");
+                    mobileNav.innerHTML = pcNav.innerHTML;
+                </script>
+            </div>
+        </header>
+
         <main>
             <!-- Hero -->
             <div class="hero-wrap">
@@ -162,7 +213,7 @@
                         <p class="desc">
                             More than 45,000+ companies trust besnik
                         </p>
-                        <p class="desc">5 Star Ratings (2k+ Review)</p>
+                        <p class="desc hide-on-mobile">5 Star Ratings (2k+ Review)</p>
                     </div>
                     <div class="images">
                         <a href="#!">
@@ -208,59 +259,53 @@
                     </p>
                     <!-- List guide -->
                     <ul class="list-guild">
-                        <li>
-                            <div class="guild-item">
+                        <li class="guild-item">
+                            <img
+                                src="./assets/img/buyer.svg"
+                                alt="Buyer"
+                                class="icon"
+                            />
+                            <h3 class="title">Buyer Guides</h3>
+                            <a href="#!" class="link">
+                                <span>How to buy</span>
                                 <img
-                                    src="./assets/img/buyer.svg"
-                                    alt="Buyer"
-                                    class="icon"
+                                    src="./assets/img/arrow_right.svg"
+                                    alt="ArrowRight"
+                                    class="arrow"
                                 />
-                                <h3 class="title">Buyer Guides</h3>
-                                <a href="#!" class="link">
-                                    <span>How to buy</span>
-                                    <img
-                                        src="./assets/img/arrow_right.svg"
-                                        alt="ArrowRight"
-                                        class="arrow"
-                                    />
-                                </a>
-                            </div>
+                            </a>
                         </li>
-                        <li>
-                            <div class="guild-item">
+                        <li class="guild-item">
+                            <img
+                                src="./assets/img/renter.svg"
+                                alt="Buyer"
+                                class="icon"
+                            />
+                            <h3 class="title">Renter Guides</h3>
+                            <a href="#!" class="link">
+                                <span>How to rent</span>
                                 <img
-                                    src="./assets/img/renter.svg"
-                                    alt="Buyer"
-                                    class="icon"
+                                    src="./assets/img/arrow_right.svg"
+                                    alt="ArrowRight"
+                                    class="arrow"
                                 />
-                                <h3 class="title">Renter Guides</h3>
-                                <a href="#!" class="link">
-                                    <span>How to rent</span>
-                                    <img
-                                        src="./assets/img/arrow_right.svg"
-                                        alt="ArrowRight"
-                                        class="arrow"
-                                    />
-                                </a>
-                            </div>
+                            </a>
                         </li>
-                        <li>
-                            <div class="guild-item">
+                        <li class="guild-item">
+                            <img
+                                src="./assets/img/seller.svg"
+                                alt="Buyer"
+                                class="icon"
+                            />
+                            <h3 class="title">Seller Guides</h3>
+                            <a href="#!" class="link">
+                                <span>How to sell</span>
                                 <img
-                                    src="./assets/img/seller.svg"
-                                    alt="Buyer"
-                                    class="icon"
+                                    src="./assets/img/arrow_right.svg"
+                                    alt="ArrowRight"
+                                    class="arrow"
                                 />
-                                <h3 class="title">Seller Guides</h3>
-                                <a href="#!" class="link">
-                                    <span>How to sell</span>
-                                    <img
-                                        src="./assets/img/arrow_right.svg"
-                                        alt="ArrowRight"
-                                        class="arrow"
-                                    />
-                                </a>
-                            </div>
+                            </a>
                         </li>
                     </ul>
                     <div class="guide-cta">
